// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BodySmall component should accept additional props 1`] = `
<Text
  accessible={false}
  bold={false}
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Regular",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  "He who lays up treasures on earth spends his life backing away from his treasures. To him, death is loss. He who lays up treasures in heaven looks forward to eternity; he’s moving daily toward his treasures. To him, death is gain." ― Randy Alcorn
</Text>
`;

exports[`the BodySmall component should accept and render passed in styles 1`] = `
<Text
  bold={false}
  italic={false}
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Regular",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Smaller salmon text
</Text>
`;

exports[`the BodySmall component should render a loading state 1`] = `
<View
  style={
    Object {
      "alignSelf": "stretch",
      "backgroundColor": "#A5A5A5",
      "borderRadius": 16,
      "height": 12,
      "marginVertical": 2.6400000000000006,
      "width": "100%",
    }
  }
/>
`;

exports[`the BodySmall component should render as bold 1`] = `
<Text
  bold={true}
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Bold",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Bold BodySmall text
</Text>
`;

exports[`the BodySmall component should render as bold italic 1`] = `
<Text
  bold={true}
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-BoldItalic",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Bold italic BodySmall text
</Text>
`;

exports[`the BodySmall component should render as italic 1`] = `
<Text
  bold={false}
  italic={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Italic",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Italic BodySmall text
</Text>
`;

exports[`the BodySmall component should render correctly 1`] = `
<Text
  bold={false}
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Regular",
      "fontSize": 12,
      "lineHeight": 17.28,
    }
  }
>
  Default BodySmall text
</Text>
`;
